feat(api/results): add from/to query parameters
